--- a/docs/libraries/changelog/meta.yaml
+++ b/docs/libraries/changelog/meta.yaml
@@ -1,30 +1,32 @@
-# meta.yaml - Library metadata
 name: changelog
-version: 0.1.0
+version: 0.1.1
 description: Simple changelog management following Keep a Changelog format
 author: Fredrik Angelsen
-
 features:
-  - Initialize CHANGELOG.md from template
-  - Update version sections automatically
-  - Keep a Changelog format compliance
-  - Semantic versioning support
-
+- Initialize CHANGELOG.md from template
+- Update version sections automatically
+- Keep a Changelog format compliance
+- Semantic versioning support
 commands:
-  - init
-  - bump
-  - check
-  - validate
+- init
+- bump
+- check
+- validate
+usage: '# Initialize a new changelog
 
-usage: |
-  # Initialize a new changelog
   ry changelog init
-  
+
+
   # Bump version (moves [Unreleased] to version section)
+
   ry changelog bump 1.2.3
-  
+
+
   # Check if [Unreleased] has content (for pre-commit)
+
   ry changelog check
-  
+
+
   # Validate format (for CI/CD)
-  ry changelog validate
+
+  ry changelog validate'
