fix: uv version command without arguments
- Fixed uv version to properly handle no arguments case
- Bumped uv library to 0.1.3

--- a/docs/libraries/uv/uv.yaml
+++ b/docs/libraries/uv/uv.yaml
@@ -206,7 +206,7 @@ match:
             echo "$UV_OUTPUT"
         else
             # Just showing version
-            {{env.RY_UV|/usr/bin/uv}} {{args.all}}
+            {{env.RY_UV|/usr/bin/uv}} version {{args.all}}
         fi
   
   publish:
