feat: implement ry-next with clean architecture and no backward compatibility
Major refactoring of ry-tool to create ry-next:
- Clean architecture with single-responsibility components
- No backward compatibility - clean API design
- Shared utilities base class for library modules
- Context factory pattern for centralized logic
- Optimized template processing with type dispatch
- Error handling decorators and command builder
- Simplified CLI framework with declarative approach

New features:
- 4 production-ready libraries (git, uv, changelog, ry-lib)
- Token-based safety system for dangerous operations
- Library installation and management system
- Environment variable setup for library execution
- Direct subprocess execution without shell escaping

Documentation:
- Complete ry-next README with usage and examples
- 3 clean, working examples (hello, git-simple, dev-workflow)
- Organized structure under docs_next/

Breaking changes:
- Direct class instantiation required (no wrappers)
- process_recursive() replaces process_dict/process_list
- CommandBuilder() for subprocess operations
- All convenience functions removed

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
 
 [project.scripts]
 ry = "ry_tool.__main__:main"
+ry-next = "ry_next.app:run"
 
 [build-system]
 requires = ["uv_build>=0.8.13,<0.9.0"]
